2017-04-28  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug occurring when more than one issuer URI is present

2017-03-07  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added LDAP support

2017-03-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: By errors it makes more sense to show the supplied host instead of the CN

2017-02-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Support for newer OpenSSL versions (1.1)

2017-02-10  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added the --sni option

2017-02-08  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Patch from Pavel Rochnyak: Changed the CN output when --altnames is used

2017-02-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed the command line argument parsing
	* check_ssl_cert: Fixed -servername

2017-01-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added patches from Pavel Rochnyak for the issuer certificate cache patch
	                  and the wildcard support in alternative names

2016-12-23  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Added patch to specify multiple CNs (see https://github.com/matteocorti/check_ssl_cert/pull/35)

2016-12-13  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed a minor problem with --debug

2016-12-06  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed a problem when specifying a CN beginnging with *

2016-12-04  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed problem when file is returing PEM certificate on newer Linux distributions

2016-09-19  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: enabling proxy support in the OCSP check (thanks to Leynos)

2016-08-04  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: disabling OCSP checks when no issuer URI is found

2016-07-29  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: fixed case insensitive comparison of CNs

2016-07-29  https://github.com/bb-Ricardo
