@@ -35,6 +35,7 @@ Options:
        --ecdsa                cipher selection: force ECDSA authentication
    -f,--file file             local file path (works with -H localhost only)
       --file-bin path         path of the file binary to be used
+      --force-perl-date       force the usage of Perl for date computations
    -h,--help,-?               this help message
       --ignore-exp            ignore expiration date
       --ignore-sig-alg        do not check if the certificate was signed with SHA1
