@@ -1,7 +1,7 @@
 .\" Process this file with
 .\" groff -man -Tascii foo.1
 .\"
-.TH "check_ssl_cert" 1 "April, 2017" "1.44.0" "USER COMMANDS"
+.TH "check_ssl_cert" 1 "May, 2017" "1.45.0" "USER COMMANDS"
 .SH NAME
 check_ssl_cert \- checks the validity of X.509 certificates
 .SH SYNOPSIS
@@ -49,7 +49,10 @@ pattern to match the email address contained in the certificate
 local file path (works with -H localhost only)
 .TP
 .BR "   --file-bin" " path"
-path of the file binary to be used"
+path of the file binary to be used
+.TP
+.BR "   --force-perl-date"
+force the usage of Perl for date computations
 .TP
 .BR "-h,--help,-?"
 this help message
