@@ -1,3 +1,4 @@
+2017-05-02 Version 1.45.0: Fixed bugs in the date computation and OCSP checks
 2017-04-28 Version 1.44.0: Fixed a bug occurring when more than one issuer URI is present
 2017-03-07 Version 1.43.0: Support for LDAP
 2017-02-16 Version 1.42.0: Support for OpenSSL > 1.1.0
