@@ -1,3 +1,9 @@
+2017-05-02  Matteo Corti  <matteo@corti.li>
+
+	* check_ssl_cert: Added --location to curl to follow redirects
+	* check_ssl_cert: Fixed the indentation of EOF in the embedded Perl script
+        * check_ssl_cert: Added --force-date-perl to force the usage of Perl for date computations and a test to be sure no errors in Perl are left undetected
+
 2017-04-28  Matteo Corti  <matteo@corti.li>
 
 	* check_ssl_cert: Fixed a bug occurring when more than one issuer URI is present
